test: 必要のないpublic、配列を変更